Tooltip styles done

--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -16,6 +16,7 @@
 /* Atoms */
 @import 'atoms/total-time';
 @import 'atoms/buttons';
+@import 'atoms/tooltip';
 
 /* Molecules */
 @import 'molecules/inputs';
