--- a/app/scss/molecules/_inputs.scss
+++ b/app/scss/molecules/_inputs.scss
@@ -8,6 +8,7 @@
         padding: 0 48px 0 8px;
         outline: 0;
         border-radius: 4px;
+        background: transparent;
     }
     &__icon {
         @include center-absolute(false, true);
