--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -19,7 +19,7 @@
 @import 'atoms/tooltip';
 
 /* Molecules */
-@import 'molecules/inputs';
+@import 'molecules/search-box';
 @import 'molecules/scrollbar-x';
 @import 'molecules/copy-controls';
 
